--- a/dotenv.example
+++ b/dotenv.example
@@ -10,6 +10,7 @@ CWF_FAYE_HOST=localhost:9292
 DOCUMENTS_FOLDER=public/system/documents
 INCLUDE_SHIBBOLETH_AUTHENTICATION=false
 USE_SHIBBOLETH_ONLY=false
+USE_CAS_ONLY=false
 INCLUDE_LDAP_AUTHENTICATION=true
 LDAP_HOST=authldap.musc.edu
 LDAP_PORT=636
